--- a/settings.cfg
+++ b/settings.cfg
@@ -1,3 +1,3 @@
 SQLALCHEMY_DATABASE_URI = 'mysql+pymysql://placebook:asdf@localhost:8889/placebook'
 SECRET_KEY = '\x907\x19\xbaUv\xeb\xb0\x0c\xcbD\xaaB\xc3\x9a\xccv\x8f\xb7\xcf\x0f\x1fO/'
-API_KEY = 'AIzaSyBTZnfwj8tWHpOUKiPaRn-EHzfokDCr67U'
+API_KEY = 
